# stm32-fc

./: .cproject  .gitignore  .project  AGENTS.md  CMakeLists.txt  CMakeLists_template.txt  README.md  stm32-fc.ioc
.github/workflows/: host-tests.yml
Application/Inc/: application.h  config.h  esc_programming.h  flight_mode.h  hmi.h  hmi_main.h  hmi_pid.h  hmi_setup.h  imu_input.h  input.h  led.h  mixer.h  output.h  pid.h  rc-input.h  serial_link.h  setup_mode.h  telemetry.h
Application/Src/: application.c  esc_programming.c  flight_mode.c  hmi.c  hmi_main.c  hmi_pid.c  hmi_setup.c  imu_input.c  input.c  led.c  mixer.c  output.c  pid.c  rc-input.c  serial_link.c  setup_mode.c  telemetry.c
Core/Inc/: bno055.h  bno055_stm32.h  main.h  stm32l1xx_it.h
Core/Src/: gpio.c  main.c  stm32l1xx_it.c  tim.c  usart.c
Debug/: makefile  objects.list  stm32-fc.elf  stm32-fc.list  stm32-fc.map
Debug/Core/Src/: main.d  main.su  stm32l1xx_it.d  stm32l1xx_it.su  subdir.mk  tim.su
Debug/Drivers/STM32L1xx_HAL_Driver/Src/: subdir.mk
HardwareLayer/Inc/: esc_output.h  hmi_output_buffer.h  imu.h  imu_calibration_store.h  rc_receiver.h  status_led.h  uart_interface.h
HardwareLayer/Src/: esc_output.c  esc_output.h  hmi_output_buffer.c  imu.c  imu_calibration_store.c  rc_receiver.c  status_led.c  uart_interface.c
Tests/: CMakeLists.txt
Tests/Application/: test_flight_mode.c  test_mixer.c  test_output.c  test_rc_input.c  test_setup_mode.c  test_telemetry.c
Tests/fakes/: fake_esc_output.c  fake_esc_output.h  fake_flight_hardware.c  fake_flight_hardware.h  fake_hmi_setup.c  fake_rc_receiver.c  fake_rc_receiver.h  hmi_setup.h  main.h
docs/: BenchVerification.md  Controls.md  ESCCalibration.md  Frame.md  Hardware.md  Interfaces.md  Software.md  Telemetry.md  Testing.md
tools/hmi_dashboard/: README.md  dashboard_state.py  hmi_dashboard.py  serial_client.py  simulator.py  telemetry_mapper.py  telemetry_protocol.py  test_telemetry.py  widgets.py
